--- a/server/.env
+++ b/server/.env
@@ -4,3 +4,4 @@ DB_NAME=di_debat_db
 DB_PASSWORD=Hnf811496114^
 DB_PORT=5432
 GEMINI_API_KEY=AIzaSyDWdZ5dTZTUFDu_NFdiGcbDVjeipwGOkgI
+DATABASE_URL=https://pmwmmkxmdzyplvmetnfj.supabase.co
